# indi-ads1x15

./: CMakeLists.txt  README.md  ads1115.cpp  ads1115.h  ads1115_measurement.cpp  ads1115_measurement.h  connection_i2c.cpp  connection_i2c.h  i2cdevice.cpp  indi_ads1x15.cpp  indi_ads1x15.h
cmake_modules/: FindNova.cmake
config/: CMakeLists.txt  indiserver.service  radioid_mqtt.service
macros/: CMakeLists.txt  radioid_mqtt.py
